# rust-quick-start

./: Cargo.toml  README.md  docker-compose.yml
crates/lib/lib-auth/: Cargo.toml
crates/lib/lib-auth/src/: error.rs  lib.rs
crates/lib/lib-auth/src/jwt/: helper.rs  mod.rs
crates/lib/lib-auth/src/scheme/: argon.rs  mod.rs
crates/lib/lib-core/: Cargo.toml
crates/lib/lib-core/src/: error.rs  lib.rs  state.rs
crates/lib/lib-core/src/middleware/: auth.rs
crates/lib/lib-core/src/routes/: auth.rs  mod.rs  user.rs
crates/lib/lib-data/: Cargo.toml
crates/lib/lib-data/src/: dto.rs  error.rs  lib.rs  manager.rs
crates/lib/lib-data/src/models/: auth.rs  user.rs
crates/lib/lib-logs/: Cargo.toml
crates/lib/lib-logs/benches/: log_bench.rs
crates/lib/lib-logs/src/: config.rs  lib.rs
crates/lib/web/: components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
crates/lib/web/src/: App.vue  base.css  main.ts
crates/lib/web/src/assets/: manifest.json
crates/lib/web/src/components/custom/: ProjectIcon.vue
crates/lib/web/src/components/custom/admin/: MainNav.vue  UserNav.vue  index.ts
crates/lib/web/src/components/custom/auth/: UserAuthFLForm.vue  UserAuthForm.vue  index.ts
crates/lib/web/src/components/ui/auto-form/: AutoForm.vue  AutoFormFieldArray.vue  AutoFormFieldBoolean.vue  AutoFormFieldDate.vue  AutoFormFieldEnum.vue  AutoFormFieldFile.vue  AutoFormFieldInput.vue  AutoFormFieldObject.vue
crates/lib/web/src/components/ui/calendar/: Calendar.vue  CalendarCell.vue  CalendarCellTrigger.vue  CalendarNextButton.vue
crates/lib/web/src/components/ui/chart/: ChartLegend.vue  ChartSingleTooltip.vue  index.ts
crates/lib/web/src/components/ui/dialog/: DialogContent.vue  DialogScrollContent.vue
crates/lib/web/src/components/ui/dropdown-menu/: DropdownMenuItem.vue
crates/lib/web/src/components/ui/range-calendar/: RangeCalendarCell.vue  RangeCalendarCellTrigger.vue  RangeCalendarNextButton.vue  RangeCalendarPrevButton.vue
crates/lib/web/src/lib/: utils.ts
crates/lib/web/src/pages/: FirstLoginPage.vue  LoginPage.vue
crates/lib/web/src/pages/admin/: AdminPage.vue  OverviewPage.vue
(+9 files in other folders)
