
[workspace]
members = [
    "./crates/bin/server",
    "./crates/bin/tools",
    "./crates/lib/lib-core",
    "./crates/lib/lib-auth",
    "./crates/lib/lib-data",
    "./crates/lib/lib-logs",
]
resolver = '2'

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7.9", features = ["macros"] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = "0.8.2"
tokio = { version = "1.42.0", features = ["full"] }
