[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

lib-auth = {path = "../lib-auth"}
lib-data = {path = "../lib-data"}

tower = "0.5.2"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }

