[package]
name = "lib-data"
version = "1.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
lib-auth = { path = "../lib-auth" }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { workspace = true, features = [
    "chrono",
    "runtime-tokio",
    "postgres",
    "derive",
    "macros",
    "migrate",
] }
log.workspace = true
url = "2.5.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
